$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.269 2005/12/01 14:21:25 ph10 Exp $

Change log file for Exim from version 4.21
-------------------------------------------

Exim version 4.61
-----------------

PH/01 The code for finding all the local interface addresses on a FreeBSD
      system running IPv6 was broken. This may well have applied to all BSD
      systems, as well as to others that have similar system calls. The broken
      code found IPv4 interfaces correctly, but gave incorrect values for the
      IPv6 interfaces. In particular, ::1 was not found. The effect in Exim was
      that it would not match correctly against @[] and not recognize the IPv6
      addresses as local.


Exim version 4.60
-----------------

PH/01 Two changes to the default runtime configuration:

      (1) Move the checks for relay_from_hosts and authenticated clients from
          after to before the (commented out) DNS black list checks.

      (2) Add control=submission to the relay_from_hosts and authenticated
          clients checks, on the grounds that messages accepted by these
          statements are most likely to be submissions.

PH/02 Several tidies to the handling of ${prvs and ${prvscheck:

      (1) Generate an error if the third argument for the ${prvs expansion is
          not a single digit.

      (2) Treat a missing third argument of ${prvscheck as if it were an empty
          string.

      (3) Reset the variables that are obtained from the first argument of
          ${prvscheck and used in the second argument before leaving the code,
          because their memory is reclaimed, so using them afterwards may do
          silly things.

      (4) Tidy up the code for expanding the arguments of ${prvscheck one by
          one (it's much easier than Tom thought :-).

      (5) Because of (4), we can now allow for the use of $prvscheck_result
          inside the third argument.

PH/03 For some reason, the default setting of PATH when running a command from